<resources>
  <string name="activity_type_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for airplane.">
    airplane
  </string>
  <string name="activity_type_atv"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ATV (All Terrain Vehicles).">
    ATV
  </string>
  <string name="activity_type_biking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for biking.">
    biking
  </string>
  <string name="activity_type_blimp"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for blimp.">
    blimp
  </string>
  <string name="activity_type_boat"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for boat.">
    boat
  </string>
  <string name="activity_type_climbing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for climbing.">
    climbing
  </string>
  <string name="activity_type_commercial_airplane"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for commercial airplane.">
    commercial airplane
  </string>
  <string name="activity_type_cross_country_skiing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cross-country skiing.">
    cross-country skiing
  </string>
  <string name="activity_type_cycling"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for cycling.">
    cycling
  </string>
  <string name="activity_type_dirt_bike"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for dirt bike.">
    dirt bike
  </string>
  <string name="activity_type_donkey_back_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for donkey back riding.">
    donkey back riding
  </string>
  <string name="activity_type_driving"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving.">
    driving
  </string>
  <string name="activity_type_driving_bus"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving bus.">
    driving bus
  </string>
  <string name="activity_type_driving_car"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for driving car.">
    driving car
  </string>
  <string name="activity_type_ferry"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ferry.">
    ferry
  </string>
  <string name="activity_type_frisbee"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for frisbee.">
    frisbee
  </string>
  <string name="activity_type_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for gliding.">
    gliding
  </string>
  <string name="activity_type_hang_gliding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hang gliding.">
    hang gliding
  </string>
  <string name="activity_type_helicopter"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for helicopter.">
    helicopter
  </string>
  <string name="activity_type_hiking"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hiking.">
    hiking
  </string>
  <string name="activity_type_horse_back_riding"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for horse back riding.">
    horse back riding
  </string>
  <string name="activity_type_hot_air_balloon"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for hot air balloon.">
    hot air balloon
  </string>
  <string name="activity_type_ice_sailing"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for ice sailing.">
    ice sailing
  </string>
  <string name="activity_type_inline_skating"
    translation_description="When entering an 'Activity type', in the auto-complete text box, the
      completion suggestion for inline skating.">
    inline skating
  </string>
  <string name="generic_cancel"
    translation_description="The text on a button to say cancel.">
    Cancel
  </string>
  <string name="generic_description"
    translation_description="The text label for entering a description.">
    Description
  </string>
  <string name="generic_name"
    translation_description="The text label for entering a name.">
    Name
  </string>
  <string name="generic_recording"
    translation_description="Text indicating a track is recording.">
    Recording&#8230;
  </string>
  <string name="generic_save"
    translation_description="The text on a button to say save.">
    Save
  </string>
  <string name="image_record"
    translation_description="The accessibility description for the record button.">
    Record
  </string>
  <string name="image_stop"
    translation_description="The accessibility description for the stop button.">
    Stop
  </string>
  <string name="marker_edit_marker_type"
    translation_description="In the marker edit page, the label for the marker type, including an
      example.">
    Marker type (e.g. waterfall)
  </string>
  <string name="marker_edit_marker_type_hint"
    translation_description="In the marker edit page, the hint in the marker type text field when it
      is empty.">
    Marker type
  </string>
  <string name="menu_delete"
    translation_description="In the menu, to delete a track or a marker.

      Character limit: ~20 (1 line)">
    Delete
  </string>
  <string name="menu_edit"
    translation_description="In the menu, to edit a track or a marker.

      Character limit: ~20 (1 line)">
    Edit
  </string>
  <string name="menu_insert_marker"
    translation_description="In the menu, to insert a marker.

      Character limit: ~20 (1 line)">
    Insert marker
  </string>
  <string name="menu_insert_photo"
    translation_description="In the menu, to insert a photo.

      Character limit: ~20 (1 line)">
    Insert photo
  </string>
  <string name="menu_map"
    translation_description="In the menu, under the map layer option, the submenu to display normal
      map.

      Character limit: ~20 (1 line)">
    Map
  </string>
  <string name="menu_map_layer"
    translation_description="In the menu, to change the map layer.

      Character limit: ~20 (1 line)">
    Map layer
  </string>
  <string name="menu_markers"
    translation_description="In the menu, to show a list of markers for the current track.

      Character limit: ~20 (1 line)">
    Markers
  </string>
  <string name="menu_play"
    translation_description="In the menu, to play a track.

      Character limit: ~20 (1 line)">
    Play
  </string>
  <string name="menu_satellite"
    translation_description="In the menu, under the map layer option, the submenu to display
      satellite.

      Character limit: ~20 (1 line)">
    Satellite
  </string>
  <string name="menu_satellite_with_streets"
    translation_description="In the menu, under the map layer option, the submenu to display
      satellite with major streets.

      Character limit: ~20 (1 line)">
    Satellite with streets
  </string>
  <string name="menu_select_all"
    translation_description="In the menu, to select all the items.

      Character limit: ~20 (1 line)">
    Select all
  </string>
  <string name="menu_sensor_state"
    translation_description="In the menu, to go to the sensor state page.

      Character limit: ~20 (1 line)">
    Sensor state
  </string>
  <string name="menu_settings"
    translation_description="In the menu, to go to the settings page.

      Character limit: ~20 (1 line)">
    Settings
  </string>
  <string name="menu_share"
    translation_description="In the menu, to share a track.

      Character limit: ~20 (1 line)">
    Share
  </string>
  <string name="menu_show_on_map"
    translation_description="In the menu, to show a track or a marker on the map.

      Character limit: ~20 (1 line)">
    Show on map
  </string>
  <string name="menu_split_frequency"
    translation_description="In the menu, to configure the split frequency, how frequent to insert a
      split marker.

      Character limit: ~20 (1 line)">
    Split frequency
  </string>
  <string name="menu_terrain"
    translation_description="In the menu, under the map layer option, the submenu to display
      terrain.

      Character limit: ~20 (1 line)">
    Terrain
  </string>
  <string name="menu_voice_frequency"
    translation_description="In the menu, to configure the voice frequency, how frequent to announce
      status.

      Character limit: ~20 (1 line)">
    Voice frequency
  </string>
  <string name="sensor_state_battery"
    translation_description="In the 'Sensor state' page, the label for the battery level on the bike
      sensor. E.g., 'Battery level: 50 %'.">
    Battery level
  </string>
  <string name="sensor_state_cadence"
    translation_description="In the 'Sensor state' page, the label for the cadence on the bike
      sensor. Cadence is the number of revolutions of the crank per minute. E.g., 'Cadence: 80 rpm'.

      Character limit: ~23 (1 line)">
    Cadence
  </string>
  <string name="sensor_state_heart_rate"
    translation_description="In the 'Sensor state' page, the label for the heart rate from a heart
      rate sensor. E.g., 'Hear rate: 100 bpm'.

      Character limit: ~23 (1 line)">
    Heart rate
  </string>
  <string name="sensor_state_last_sensor_time"
    translation_description="In the 'Sensor state' page, the label for the last time the sensor has
      sent a data. E.g., 'Last sensor time: 10:05 am'.">
    Last sensor time
  </string>
  <string name="sensor_state_power"
    translation_description="In the 'Sensor state' page, the label for the power from the bike
      sensor. Power is the power output of the rider. E.g., 'Power: 50 W'.

      Character limit: ~23 (1 line)">
    Power
  </string>
  <string name="share_track_emails_hint"
    translation_description="The hint for the auto complete text box for entering email addresses.">
    Email addresses
  </string>
  <string name="share_track_invite"
    translation_description="The checkbox to invite people to view a track.">
    Invite people to view
  </string>
  <string name="share_track_public"
    translation_description="The checkbox to make a track public and share its url.">
    Make public &amp; share URL
  </string>
  <string name="track_edit_activity_type"
    translation_description="In the page to edit a track, the label for the text field to edit the
      activity type, including an example.">
    Activity type (e.g. hiking)
  </string>
  <string name="track_edit_activity_type_hint"
    translation_description="In the page to edit a track, the hint in the 'Activity type' text field
      when it is empty.">
    Activity type
  </string>
</resources>