<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2010 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView style="@style/ScrollView.WithBottomButtons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/EditLabel"
                android:text="@string/generic_name" />

            <EditText
                android:id="@+id/track_edit_name"
                style="@style/EditNameTrack"
                android:hint="@string/generic_name"
                android:imeOptions="actionNext"
                android:importantForAutofill="no" />

            <TextView
                style="@style/EditLabel.WithPaddingTop"
                android:text="@string/track_edit_activity_type" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/track_edit_activity_type"
                    style="@style/EditCategory"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:hint="@string/track_edit_activity_type_hint"
                    android:imeOptions="actionNext" />

                <Spinner
                    android:id="@+id/track_edit_activity_type_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom" />
            </LinearLayout>

            <TextView
                style="@style/EditLabel.WithPaddingTop"
                android:text="@string/generic_description" />

            <EditText
                android:id="@+id/track_edit_description"
                style="@style/EditDescription"
                android:hint="@string/generic_description"
                android:imeOptions="actionDone"
                android:importantForAutofill="no" />
        </LinearLayout>
    </ScrollView>

    <View style="@style/BottomButtonDivider" />

    <LinearLayout style="@style/BottomButtonBar">

        <Button
            android:id="@+id/track_edit_cancel"
            style="@style/BottomButton"
            android:layout_gravity="left"
            android:text="@string/generic_cancel" />

        <Button
            android:id="@+id/track_edit_save"
            style="@style/BottomButton"
            android:layout_gravity="right"
            android:text="@string/generic_save" />
    </LinearLayout>
</LinearLayout>