<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright 2013 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/ScrollView" >
  <LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="8dp">
    <CheckBox
      android:id="@+id/share_track_public"
      android:layout_gravity="center_vertical"
      android:text="@string/share_track_public"
      style="@style/TextMedium" />
    <CheckBox
      android:id="@+id/share_track_invite"
      android:layout_gravity="center_vertical"
      android:layout_marginTop="16dp"
      android:text="@string/share_track_invite"
      style="@style/TextMedium" />
    <MultiAutoCompleteTextView
      android:completionThreshold="1"
      android:hint="@string/share_track_emails_hint"
      android:id="@+id/share_track_emails"
      android:imeOptions="actionDone"
      android:layout_height="wrap_content"
      android:layout_marginLeft="8dp"
      android:layout_width="match_parent"
      android:singleLine="false"
      android:visibility="gone" >
    </MultiAutoCompleteTextView>
    <TextView 
      android:text="@string/share_track_footer"
      android:layout_marginTop="16dp"
      style="@style/TextSmall" />
  </LinearLayout>
</ScrollView>