<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2012 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView style="@style/ScrollView.WithBottomButtons">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                style="@style/EditLabel"
                android:text="@string/generic_name" />

            <LinearLayout
                android:id="@+id/marker_edit_statistics_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/marker_edit_statistics_name"
                    style="@style/EditNameMarker"
                    android:drawableLeft="@drawable/ic_marker_yellow_pushpin"
                    android:hint="@string/generic_name"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/marker_edit_waypoint_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/marker_edit_waypoint_name"
                    style="@style/EditNameMarker"
                    android:drawableLeft="@drawable/ic_marker_blue_pushpin"
                    android:hint="@string/generic_name"
                    android:imeOptions="actionNext"
                    android:importantForAutofill="no" />

                <TextView
                    style="@style/EditLabel.WithPaddingTop"
                    android:text="@string/marker_edit_marker_type" />

                <AutoCompleteTextView
                    android:id="@+id/marker_edit_waypoint_marker_type"
                    style="@style/EditCategory"
                    android:layout_width="match_parent"
                    android:hint="@string/marker_edit_marker_type_hint"
                    android:imeOptions="actionNext" />

                <TextView
                    style="@style/EditLabel.WithPaddingTop"
                    android:text="@string/generic_description" />

                <EditText
                    android:id="@+id/marker_edit_waypoint_description"
                    style="@style/EditDescription"
                    android:hint="@string/generic_description"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View style="@style/BottomButtonDivider" />

    <LinearLayout style="@style/BottomButtonBar">

        <include layout="@layout/marker_edit_buttons" />
    </LinearLayout>
</LinearLayout>