<?xml version="1.0" encoding="utf-8"?><!--
Copyright 2012 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/track_controller_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/track_controller_background"
        android:paddingTop="8dp"
        android:paddingBottom="8dp">

        <ImageButton
            android:id="@+id/track_controller_record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_record"
            android:src="@drawable/ic_button_record" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="6">

            <TextView
                android:id="@+id/track_controller_total_time"
                style="@style/TextSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:textColor="@android:color/white"
                tools:text="0:12:34" />

            <TextView
                android:id="@+id/track_controller_status"
                style="@style/TextMicro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@id/track_controller_total_time"
                android:layout_alignParentStart="true"
                android:gravity="center"
                android:singleLine="true"
                tools:text="@string/generic_recording" />
        </RelativeLayout>

        <ImageButton
            android:id="@+id/track_controller_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_stop"
            android:src="@drawable/button_stop" />

    </LinearLayout>
</merge>